--- a/Ch.1.1.ipynb
+++ b/Ch.1.1.ipynb
@@ -432,22 +432,262 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 1.1.10 Comentarios\n",
+    "\n",
+    "Junto con las declaraciones del programa, a menudo es informativo proporcionar algunos comentarios en un lenguaje humano natural para explicar la idea detrás de las declaraciones. Los comentarios en Python comienzan con el carácter #, y todo lo que está después de este carácter en una línea se ignora cuando se ejecuta el programa. Aquí hay un ejemplo de nuestro programa con comentarios explicativos:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Programa para calcular la altura de una pelota en movimiento vertical.\n",
+    "\n",
+    "v0 = 5 # initial velocity\n",
+    "g = 9.81 # acceleration of gravity\n",
+    "t=0.6 #time\n",
+    "y = v0*t - 0.5*g*t**2  # vertical position\n",
+    "print (y)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Este programa y la versión inicial en la Sección 1.1.7 son idénticos cuando se ejecutan en la computadora, pero para un humano este último es más fácil de entender debido a los comentarios.\n",
+    "\n",
+    "Los buenos comentarios junto con los nombres de variables bien elegidos son necesarios para cualquier programa más largo que unas pocas líneas, porque de lo contrario el programa se vuelve difícil de entender, tanto para el programador como para otros. Se requiere algo de práctica para escribir comentarios realmente instructivos. Nunca repita con palabras lo que las declaraciones del programa ya expresan claramente. En su lugar, use comentarios para proporcionar información importante que no es obvia a partir del código, por ejemplo, qué significan los nombres de las variables matemáticas, para qué se usan las variables, una descripción general rápida de un conjunto de declaraciones futuras e ideas generales detrás de la estrategia de resolución de problemas en el código.\n",
+    "\n",
+    "**Observación.** Si utiliza caracteres que no están en inglés en sus comentarios, Python se quejará. Por ejemplo,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = 1.8   # Å. Ødegård recommended this value for s"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "\n",
+    "La ejecución de este programa da como resultado el mensaje de error\n",
+    "\n",
+    "    SyntaxError: carácter no ASCII ’\\ xc3’ en el archivo ...\n",
+    "    pero ninguna codificación declarada; ver\n",
+    "    http://www.python.org/peps/pep-0263.html para más detalles\n",
+    "\n",
+    "Se permiten caracteres que no estén en inglés si coloca la siguiente línea mágica en el programa antes de que se utilicen dichos caracteres:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# -*- coding: utf-8 -*-\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "(Sí, este es un comentario, ¡pero Python no lo ignora!) Más información sobre caracteres y codificaciones que no están en inglés como UTF-8 se encuentra en la Sección 6.3.5."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.1.11 Formato de texto y números\n",
+    "\n",
+    "En lugar de solo imprimir el valor numérico de y en nuestro programa introductorio, ahora queremos escribir un texto más informativo, típicamente algo como\n",
+    "\n",
+    "     En t = 0.6 s, la altura de la pelota es de 1.23 m.\n",
+    "\n",
+    "donde también tenemos el control del número de dígitos (aquí y es exacto hasta centímetros solamente).\n",
+    "\n",
+    "**Sintaxis de Printf.** La salida del tipo que se muestra arriba se logra mediante una declaración de impresión combinada con alguna técnica para formatear los números. La técnica más antigua y más utilizada se conoce como formateo de printf (que se origina a partir de la función printf en el lenguaje de programación C). Para un recién llegado a la programación, la sintaxis del formato de printf puede parecer incómoda, pero es bastante fácil de aprender y muy conveniente y flexible para trabajar. La sintaxis de printf también se usa en muchos otros lenguajes de programación.\n",
+    "\n",
+    "La salida de muestra anterior es producida por esta declaración usando la sintaxis de printf:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "print ’At t=%g s, the height of the ball is %.2f m.’ % (t, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vamos a explicar esta línea en detalle. La declaración de impresión imprime una cadena: todo lo que está encerrado entre comillas (ya sea simple: ', o doble: \") denota una cadena en Python. La cadena anterior está formateada usando la sintaxis de printf. Esto significa que la cadena tiene varias\" ranuras \", comenzando con un signo de porcentaje, aquí% g y% .2f, donde se pueden colocar las variables en el programa. Tenemos dos \"slots\" en el presente caso y, por lo tanto, se deben colocar dos variables en los slots. La sintaxis relevante es para enumerar las variables dentro de paréntesis estándar después de la cadena, separados de la cadena por un signo de porcentaje. La primera variable, t, entra en la primera \"espacio\". Esta \"ranura\" tiene una especificación de formato% g, donde el signo de porcentaje marca la ranura y el siguiente carácter, g, es una especificación de formato. El formato g indica al número real que se escriba lo más compacto posible. La siguiente variable, y, va a la segunda \"ranura\". La especificación de formato aquí es .2f, lo que significa un número real escrito con dos dígitos después de la coma. La f en el formato .2f significa float, una forma corta para el número de punto flotante, que es el término utilizado para un número real en una computadora.\n",
+    "\n",
+    "Para completar, presentamos todo el programa, donde el texto y los números se mezclan en la salida:\n",
+    "\n",
+    "     v0 = 5\n",
+    "     g = 9.81\n",
+    "     t = 0.6\n",
+    "     y = v0 * t - 0.5 * g * t ** 2\n",
+    "     print ’En t =% g s, la altura de la pelota es% .2f m.’% (t, y)\n",
+    "     \n",
+    "El programa se encuentra en el archivo **ball_print1.py** en la carpeta **src/formulas** de la colección de programas asociados con este libro."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hay muchas más formas de especificar formatos. Por ejemplo, e escribe un número en notación científica, es decir, con un número entre 1 y 10 seguido de una potencia de 10, como en 1.2432 · 10 3. En una computadora, dicho número está escrito en la forma 1.2432e-03. La capital E en el exponente también es posible, simplemente reemplace e por E, con el resultado 1.2432E-03.\n",
+    "\n",
+    "Para la notación decimal, usamos la letra f, como en% f, y el número de salida aparece con dígitos antes y / o después de una coma, por ejemplo, 0.0012432 en lugar de 1.2432E-03. Con el formato g, la salida utilizará la notación científica para los números grandes o pequeños y la notación decimal de lo contrario. Este formato es normalmente lo que da la salida más compacta de un número real. Una minúscula g conduce a una minúscula e en notación científica, mientras que la mayúscula G implica una E en lugar de una e en el exponente.\n",
+    "\n",
+    "También se puede especificar el formato como 10.4f o 14.6E, lo que significa que en el primer caso un flotante se escribe en notación decimal con cuatro decimales en un campo de ancho igual a 10 caracteres, y en el segundo caso un flotante escrito en notación científica Con seis decimales en un campo de 14 caracteres de ancho.\n",
+    "\n",
+    "Aquí hay una lista de algunas especificaciones importantes de formato de printf (el programa **printf_demo.py** ejemplifica muchas de las construcciones):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        \n",
+    "    % s      una cadena\n",
+    "    % d      un entero\n",
+    "    % 0xd    un entero completado con x ceros iniciales\n",
+    "    % f      notación decimal con seis decimales\n",
+    "    % e      notación científica compacta, e en el exponente\n",
+    "    % E      notación científica compacta, E en el exponente\n",
+    "    % g      decimal decimal o notación científica (con e)\n",
+    "    % G      decimal compacto o notación científica (con E)\n",
+    "    % xz     formato z ajustado a la derecha en un campo de ancho x\n",
+    "    % -xz    formato z ajustado a la izquierda en un campo de ancho x\n",
+    "    % .yz    formato z con y decimales\n",
+    "    % x.yz   formatea z con y decimales en un campo de ancho x \n",
+    "    %%       el signo de porcentaje% en sí mismo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para obtener una especificación completa de las posibles cadenas de formato de estilo printf, siga el enlace del elemento del formato de estilo de printf en el índice2 de la documentación en línea de la biblioteca estándar de Python.\n",
+    "\n",
+    "Podemos probar algunos formatos escribiendo más números en la pantalla de nuestro programa (el archivo correspondiente es ball_print2.py):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "    v0 = 5\n",
+    "    g = 9.81\n",
+    "    t = 0.6\n",
+    "    y = v0*t - 0.5*g*t**2\n",
+    "    print \"\"\"\n",
+    "    At t=%f s, a ball with\n",
+    "    initial velocity v0=%.3E m/s\n",
+    "    is located at the height %.2f m.\n",
+    "    \"\"\" % (t, v0, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observe aquí que usamos una cadena de comillas triples, reconocida al comenzar y terminar con tres comillas simples o dobles: \"\" o \"\". Las cadenas de comillas triples se utilizan para el texto que abarca varias líneas.\n",
+    "\n",
+    "En la declaración de impresión anterior, imprimimos t en el formato f, que por defecto implica seis decimales; v0 se escribe en el formato .3E, que implica tres decimales y el número se extiende en el campo más estrecho posible; e y se escribe con dos decimales en notación decimal en el campo más estrecho posible. La salida se convierte en"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "        Terminal> python ball_print2.py\n",
+    "        At t=0.600000 s, a ball with\n",
+    "        initial velocity v0=5.000E+00 m/s\n",
+    "        is located at the height 1.23 m."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Debe mirar cada número en la salida y verificar el formato en detalle.\n",
+    "\n",
+    "**Formato de sintaxis de cadena.** Python ofrece toda la funcionalidad del formato printf y mucho más a través de una sintaxis diferente, a menudo conocida como sintaxis de cadena de formato. Ilustremos esta sintaxis en la salida de una línea utilizada previamente para mostrar la construcción de printf. Se lee la sintaxis de cadena de formato correspondiente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print ’At t={t:g} s, the height of the ball is {y:.2f} m.’.format(\n",
+    "    t=t, y=y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Las \"ranuras\" donde se insertan las variables ahora se reconocen con llaves en lugar de un signo de porcentaje. El nombre de la variable se lista con dos puntos opcionales y un especificador de formato del mismo tipo que el utilizado para el formato printf. Las diversas variables y sus valores deben enumerarse al final como se muestra. Esta vez, las \"ranuras\" tienen nombres, por lo que la secuencia de variables no es importante.\n",
+    "\n",
+    "El ejemplo de varias líneas se escribe de la siguiente manera en este formato alternativo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print \"\"\"\n",
+    "At t={t:f} s, a ball with\n",
+    "initial velocity v0={v0:.3E} m/s\n",
+    "is located at the height {y:.2f} m.\n",
+    "\"\"\".format(t=t, v0=v0, y=y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Los caracteres de nueva línea.** A menudo queremos que un programa de computadora escriba texto que abarque varias líneas. En el último ejemplo, obtuvimos dicha salida mediante cadenas de comillas triples. También podríamos usar cadenas de comillas simples y un carácter especial para indicar dónde deben ocurrir los saltos de línea. Este carácter especial lee \\ n, es decir, una barra invertida seguida de la letra n. Las dos declaraciones impresas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print \"\"\"y(t) is\n",
+    "the position of\n",
+    "our ball.\"\"\"\n",
+    "print (’y(t) is\\nthe position of\\nour ball’)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "resultado en salida idéntica:\n",
+    "\n",
+    "    y (t) es\n",
+    "    la posición de\n",
+    "    nuestra pelota"
+   ]
   },
   {
    "cell_type": "markdown",
