--- a/Traduccion/Capitulo 1/Ch. 1.1 Introducción.ipynb
+++ b/Traduccion/Capitulo 1/Ch. 1.1 Introducción.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Introducción\n",
+    "## 1.1 Introducción\n",
     "\n",
     "El objetivo de este libro es enseñar programación de computadoras usando ejemplos de matemáticas y ciencias naturales. Hemos elegido utilizar el lenguaje de programación Python porque combina un poder expresivo notable con una sintaxis muy limpia, simple y compacta. Python es fácil de aprender y muy adecuado para una introducción a la programación de computadoras. Python también es bastante similar a MATLAB y es un buen lenguaje para hacer computación matemática. Es fácil combinar Python con lenguajes compilados, como Fortran, C y C ++, que son lenguajes ampliamente utilizados para cálculos científicos.\n",
     "Los ejemplos en este libro integran la programación con aplicaciones en matemáticas, física, biología y finanzas. Se espera que el lector tenga conocimiento del cálculo básico de una variable como se enseña en los programas intensivos de matemáticas en las escuelas secundarias. Sin duda, es una ventaja tomar un curso de cálculo universitario en paralelo, que contiene preferiblemente aspectos tanto clásicos como numéricos del cálculo. Aunque no es estrictamente necesario, los antecedentes en física de la escuela secundaria hacen que muchos de los ejemplos sean más significativos.\n",
