--- a/Traduccion/Capitulo 1/Ch. 1.9 Ejercicios.ipynb
+++ b/Traduccion/Capitulo 1/Ch. 1.9 Ejercicios.ipynb
@@ -45,17 +45,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "v = 1 + 1\n",
     "print (v)"
@@ -72,17 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, World!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print ('Hello, World!')"
    ]
@@ -140,13 +124,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Ejercicio 1.6: Calcular el crecimiento del dinero en un banco.\n",
+    "### Ejercicio 1.6: Calcular el interes del dinero en un banco.\n",
     "\n",
     "Sea $p$ la tasa de interés de un banco en porcentaje por año. Una cantidad inicial A ha crecido hasta\n",
     "\n",
-    "$\n",
+    "$$\n",
     "A (1+ \\frac {p}{100})^n\n",
-    "$\n",
+    "$$\n",
     "\n",
     "después de n años. Haga un programa para calcular cuánto dinero han crecido 1000 euros después de tres años con una tasa de interés del 5 por ciento. Nombre de archivo: interest_rate.py."
    ]
@@ -201,6 +185,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import pi\n",
+    "h = 5.0 # height\n",
+    "b=2.0 #base\n",
+    "r = 1.5 # radius\n",
+    "area_parallelogram = h*b\n",
+    "print (’The area of the parallelogram is %.3f’ % area_parallelogram)\n",
+    "area_square = b**2\n",
+    "print (’The area of the square is %g’ % area_square)\n",
+    "area_circle = pi*r**2\n",
+    "print (’The area of the circle is %.3f’ % area_circle)\n",
+    "volume_cone = 1.0/3*pi*r**2*h\n",
+    "print (’The volume of the cone is %.3f’ % volume_cone)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -218,17 +222,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import sin, cos, pi\n",
     "x = pi/4\n",
@@ -247,17 +243,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "v0 = 3\n",
     "t = 1\n",
@@ -285,18 +273,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-aacad888f8f6>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-aacad888f8f6>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    eq1_sum = a2 + 2ab + b2\u001b[0m\n\u001b[0m                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 3.3\n",
     "b = 5.3\n",
@@ -326,6 +305,8 @@
     "f (x) = \\frac{1}{\\sqrt{2\\pi s}}exp\\begin{bmatrix}-\\frac{1}{2}(\\frac{x-m}{s})^2\\end{bmatrix}\n",
     "$$\n",
     "\n",
+    "\n",
+    "\n",
     "es una de las funciones más utilizadas en ciencia y tecnología. Los parámetros m y s > 0 son números reales prescritos. Cree un programa para evaluar esta función cuando m = 0, s = 2 y x = 1. Verifique el resultado del programa comparándolo con los cálculos manuales en una calculadora.\n",
     "\n",
     "Nombre de archivo: gaussian1.py.\n",
@@ -348,6 +329,8 @@
     "### Ejercicio 1.11: Calcula la resistencia del aire en una pelota de fútbol.\n",
     "\n",
     "La fuerza de arrastre, debida a la resistencia del aire, en un objeto se puede expresar como:\n",
+    "\n",
+    "#### Ecuacion Nº 1.8\n",
     "\n",
     "$$\n",
     "F_d =\\frac{1}{2}C_D \\varrho AV^2\n",
@@ -372,22 +355,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Velocity: 120 km/h\n",
-      "Drag force: Fd = 1/2*Cd*q*AV^2 \tequals 5.1 N\n",
-      "Gravity force: Fg = m*g \tequals 0.43 * 9.81 = 4.2 N\n",
-      "Ratio drag force/gravity force: 1.20\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import pi\n",
     "\n",
@@ -423,9 +393,10 @@
     "\n",
     "La siguiente fórmula expresa el tiempo $t$ que toma (en segundos) para que el centro de la yema alcance la temperatura $T_y$ (en grados Celsius):\n",
     "\n",
+    "#### Ecuacion Nº 1.9\n",
     "\n",
     "$$\n",
-    "t = {M^{2/3}c\\rho^{1/3}\\over K\\pi^2(4\\pi/3)^{2/3}}\\ln\\begin{bmatrix}0.76{T_o - T_w\\over T_y - T_w}\\end{bmatrix}\n",
+    "t = {M^{2/3}c\\rho^{1/3}\\over K\\pi^2(4\\pi/3)^{2/3}}\\ln\\begin{bmatrix}0.76 \\frac{T_o - T_w}{T_y - T_w}\\end{bmatrix}\n",
     "$$\n",
     "\n",
     "Aquí, $M$,$\\rho$, $c$ y $K$ son propiedades del huevo: \n",
@@ -445,17 +416,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recommended cooking time: 6.61 min\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#M = 47       # small egg\n",
     "M = 67      # large egg\n",
@@ -473,7 +436,7 @@
     "    (K*pi**2*(4*pi/3)**(2/3.0)))*\\\n",
     "    log(0.76*(float(T_o - T_w)/(T_y - T_w)))\n",
     "\n",
-    "print ('Recommended cooking time: %.2f min' % (t/60.))"
+    "print (\"Tiempo recomendado para cocinar es de {:.2f} min\".format(t/60))"
    ]
   },
   {
@@ -485,24 +448,29 @@
     "El propósito de este ejercicio es explicar cómo la ecuación (1.6) para la trayectoria de una pelota surge de la física básica. No hay programación en este ejercicio, solo física y matemáticas.\n",
     "\n",
     "El movimiento de la pelota se rige por la segunda ley de Newton:\n",
-    "\n",
+    "#### Ecuacion Nº 1.10\n",
     "$$ F_x = ma_x$$ \n",
+    "#### Ecuacion Nº 1.11\n",
     "$$ F_y = ma_y$$\n",
     "\n",
     "donde $F_x$ y $F_y$ son la suma de las fuerzas en las direcciones x e y, respectivamente, $a_x$ y $a_y$ son las aceleraciones de la bola en las direcciones x e y, y $m$ es la masa de la bola. \n",
     "\n",
     "Sea ($x(t)$, $y(t)$) la posición de la bola, es decir, la coordenada horizontal y vertical de la bola en el tiempo $t$. Existen relaciones bien conocidas entre aceleración, velocidad y posición: la aceleración es la derivada temporal de la velocidad y la velocidad es la derivada temporal de la posición. Por lo tanto tenemos que\n",
-    "\n",
+    "#### Ecuacion Nº 1.12\n",
     "$$ a_x={d^2x\\over dt^2}$$\n",
+    "#### Ecuacion Nº 1.13\n",
     "$$ a_y={d^2y\\over dt^2}$$\n",
     "\n",
     "Si asumimos que la gravedad es la única fuerza importante sobre la bola, $F_x = 0$ y $F_y = mg$.\n",
     "\n",
     "Integrar los dos componentes de la segunda ley de Newton dos veces. Usa las condiciones iniciales de velocidad y posición,\n",
-    "\n",
+    "#### Ecuacion Nº 1.14\n",
     "$${d \\over dt}x(0)=v_0 \\cos \\theta $$\n",
+    "#### Ecuacion Nº 1.15\n",
     "$${d \\over dt}y(0)=v_0 \\sin \\theta $$\n",
+    "#### Ecuacion Nº 1.16\n",
     "$$ x(0) = 0$$\n",
+    "#### Ecuacion Nº 1.17\n",
     "$$ y(0) = y_0$$\n",
     "\n",
     "Determinar las cuatro constantes de integración. Escribe las expresiones finales para $x(t)$ y $y(t)$. Demuestre que si $\\theta$ = $\\pi /2$, es decir, el movimiento es puramente vertical, obtenemos la fórmula (1.1) para la posición y. También demuestre que si eliminamos t, terminamos con la relación (1.6) entre las coordenadas x e y de la pelota. Puede leer más sobre este tipo de movimiento en un libro de física, por ejemplo,16. \n",
@@ -512,21 +480,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "v0    = 15.0 km/h\n",
-      "theta = 60 degrees \n",
-      "y0    = 1.0 m\n",
-      "x     = 0.5 m\n",
-      "y     = 1.6 m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "g = 9.81    # m/s**2\n",
     "v0 = 15     # km/h\n",
@@ -569,18 +525,93 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Ejercicio 1.15: Explica por qué un programa no funciona\n",
+    "\n",
+    "Descubre por qué el siguiente programa no funciona:\n",
+    "\n",
+    "    C=A+B\n",
+    "    A=3\n",
+    "    B=2\n",
+    "    print (\"c\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 1.16: encontrar errores en las declaraciones de Python\n",
+    "\n",
+    "Pruebe las siguientes afirmaciones en un shell de Python interactivo. Explique por qué algunas afirmaciones fallan y corrija los errores.\n",
+    "\n",
+    "    1a = 2\n",
+    "    a1 = b\n",
+    "    x=2\n",
+    "    y=X+4 #isit6? from Math import tan print tan(pi)\n",
+    "    pi = \"3.14159\"\n",
+    "    print tan(pi)\n",
+    "    c = 4**3**2**3\n",
+    "    _ = ((c-78564)/c + 32))\n",
+    "    discount = 12%\n",
+    "    AMOUNT = 120.-\n",
+    "    amount = 120\n",
+    "    address = hpl@simula.no\n",
+    "    and = duck\n",
+    "    class = ’INF1100, gr 2\"\n",
+    "    continue_ = x > 0\n",
+    "    rev = fox = True\n",
+    "    Norwegian = [’a human language’]\n",
+    "    True = fox is rev in Norwegian\n",
+    "\n",
+    "**Consejo**. Es aconsejable probar los valores de las expresiones en el lado derecho y la validez de los nombres de las variables, por separado, antes de poner los lados derecho e izquierdo juntos en declaraciones. Las dos últimas afirmaciones funcionan, pero explicar por qué va más allá de lo que se trata en este capítulo.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 1.17: encontrar errores en la codificación de una fórmula\n",
+    "\n",
+    "Dada una ecuación cuadrática,\n",
+    "\n",
+    "$$\n",
+    "ax^2+bx+c=0\n",
+    "$$\n",
+    "\n",
+    "las dos raíces son:\n",
+    "\n",
+    "#### Ecuacion Nº 1.18\n",
+    "\n",
+    "$$\n",
+    "x_1=\\frac{-b+\\sqrt{b^2-4ac}}{2a}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "x_2=\\frac{-b-\\sqrt{b^2-4ac}}{2a}\n",
+    "$$\n",
+    "\n",
+    "Corrige el programa para que resuelva la ecuación dada. Nombre de archivo: find_errors_roots.py.\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = 2; b = 1; c = 2\n",
+    "\n",
+    "from math import sqrt\n",
+    "\n",
+    "q = b*b - 4*a*c\n",
+    "q_sr = sqrt(q)\n",
+    "x1 = (-b + q_sr)/2*a\n",
+    "x2 = (-b - q_sr)/2*a\n",
+    "print (x1, x2)"
+   ]
   },
   {
    "cell_type": "code",
